# Endless-Runner-OpenGL

./: .gitignore  AnimationMgr.cpp  AnimationMgr.h  BoxCollider.cpp  BoxCollider.h  CMakeLists.txt  CircleCollider.cpp  CircleCollider.h  Collideable.cpp  Collideable.h  Collider.h  EndlessRunner.VC.VC.opendb  EndlessRunner.sln  FHL.sln  GLFW new project.cbp  GLFW new project.depend  GLFW new project.layout  Game.cpp  Game.h  Global.h  Hero.cpp  Hero.h  Island.cpp  Island.h  README.md  RectsCollider.cpp  RectsCollider.h  ScreenRenderer.cpp  ScreenRenderer.h  Sphere.cpp  Sphere.h  main glfw.cpp  project.cbp  project.depend  project.layout
Debug/: EndlessRunner.exp
Debug/Graphics/Shaders/: modelLightTest.glsl  model_fs2.glsl  rectLight_vs.glsl  rect_vs.glsl
EndlessRunner/: CMakeLists.txt  EndlessRunner.vcxproj  EndlessRunner.vcxproj.filters
EndlessRunner/Debug/: vc140.idb
EndlessRunner/Debug/EndlessRunner.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EndlessRunner.lastbuildstate  EndlessRunner.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EndlessRunner/Release/EndlessRunner.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EndlessRunner.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EndlessRunner/Resources/ShaderSrcs/: screen_fs.glsl
EndlessRunner/Resources/Tex/: bullet.psd  bullet2.psd
EndlessRunner/src/: .Coin.h.swp  AnimationMgr.cpp  AnimationMgr.h  BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Coin.cpp  Coin.h  Collideable.cpp  Collideable.h  Debug.h  EndlessCliff.cpp  EndlessCliff.h  Game.cpp  Game.h  Hero.cpp  Hero.h  Input.h  Island.cpp  Island.h  RectsCollider.cpp  RectsCollider.h  ScreenRenderer.cpp  ScreenRenderer.h  SoundMgr.h  Sphere.cpp  Sphere.h  main.cpp
EndlessRunner/src/FHL/GL/: gl3w.c
EndlessRunner/src/FHL/Graphics/: Buffer.h  Color.h  ColoredRect.cpp  ColoredRect.h  Configurator.cpp  Configurator.h  Light.cpp  Light.h  Litable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  RenderConf.cpp  RenderConf.h  RenderMatrices.h  RenderTexture.cpp  RenderTexture.h  Renderable.h  Renderer.cpp  Renderer.h  ResMgr.cpp  ResMgr.h  Shader.cpp  Shader.h  Sizeable.cpp  Sizeable.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TexturedSizeable.cpp  TexturedSizeable.h  Transformable.cpp  Transformable.h  Transformable3D.cpp  Transformable3D.h  UsingGl.h  (+8 more)
EndlessRunner/src/FHL/Graphics/Shaders/: modelLight_vs.glsl
EndlessRunner/src/FHL/Maths/: BoolVec.h  Mat4.cpp  Mat4.h  Mat4.inl  Quaternion.cpp  Quaternion.h  Vec2.h  Vec3.h  Vec4.h  VecBase.h  mathsFuncs.h  swizzle.h  vectors.h
EndlessRunner/src/FHL/Utility/: Clock.h  Compare.h  Cube.cpp  Cube.h  Debug.cpp  Debug.h  OrientedRect.cpp  OrientedRect.h  Rect.cpp  Rect.h
EndlessRunner/src/Graphics/: Buffer.cpp  Buffer.h  Color.cpp  Color.h  ColoredRect.cpp  ColoredRect.h  Configurator.cpp  Configurator.h  DrawConf.cpp  DrawConf.h  DrawFuncs.cpp  DrawFuncs.h  Drawable.h  Light.cpp  Light.h  Litable.cpp  Litable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelData.h  RenderConf.cpp  RenderConf.h  RenderFuncs.cpp  RenderFuncs.h  RenderMatrices.h  RenderTexture.cpp  RenderTexture.h  Renderable.h  Renderer.h  ResMgr.cpp  ResMgr.h  Shader.cpp  Shader.h  ShaderSrcs.h  Sizeable.cpp  Sizeable.h  Sprite.cpp  Sprite.h  (+20 more)
EndlessRunner/src/Graphics/Shaders/: modelLight_fs.glsl  modelLight_vs.glsl  model_fs.glsl  model_vs.glsl  rectLight_fs.glsl  rectLight_vs.glsl  rect_fs.glsl  rect_vs.glsl  spriteLight_fs.glsl  spriteLight_vs.glsl  sprite_fs.glsl  sprite_vs.glsl
EndlessRunner/src/Maths/: Constants.h  Mat4.cpp  Mat4.h  Maths_funcs.cpp  Maths_funcs.h  Quaternion.cpp  Quaternion.h  Vec2.h  Vec3.h  Vec4.h  Vectors.h  mathsFuncs.h  swizzle.h  vectors.h
EndlessRunner/src/Utility/: Clock.cpp  Clock.h  Debug.h  OrientedRect.cpp  OrientedRect.h  Rect.cpp  Rect.h  ResMgr.cpp  ResMgr.h
FHL/: CMakeLists.txt  FHL.vcxproj  FHL.vcxproj.filters
FHL/src/FHL/: common.h
FHL/src/FHL/GL/: gl3w.h
FHL/src/FHL/Graphics/: Buffer.h  Color.h  ColoredRect.h  Configurator.h  Litable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  RenderTexture.h  Renderer.cpp  Shader.cpp  Shader.h  Sizeable.cpp  Sprite.h  Texture.cpp  Texture.h  Transformable.h  Vao.h  VertexArray.h
FHL/src/FHL/Graphics/Shaders/: modelLight_fs.glsl
FHL/src/FHL/Maths/: Quaternion.h  Vec2.h  Vec4.h  VecBase.h  mathsFuncs.h
FHL/src/FHL/Utility/: Cube.h  OrientedRect.cpp  OrientedRect.h  Rect.h
Graphics/: Buffer.cpp  Buffer.h  Color.cpp  Color.h  ColoredRect.cpp  ColoredRect.h  Configurator.cpp  Configurator.h  Drawable.h  Light.h  Litable.cpp  Litable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Sizeable.cpp  Sizeable.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TexturedSizeable.cpp  TexturedSizeable.h  Transform.cpp  Transform.h  Transformable.cpp  Transformable.h  Transformable3D.h  Vao.cpp  Vao.h  Vertex.h  VertexArray.cpp  VertexArray.h  WithShader.cpp  WithShader.h
Graphics/Shaders/: model light copy.glsl  modelLight_fs.glsl  rectLight_fs.glsl  spriteLight_vs.glsl
Graphics/oldsprite/: Sprite.cpp  Sprite.h
Graphics/transformable old/: Transformable.cpp  Transformable.h
Release/: DebugLog.txt  EndlessRunner.iobj  EndlessRunner.ipdb
Release/Graphics/Shaders/: array_fs.glsl  array_vs.glsl  modelLightTest.txt  modelLight_fs.glsl  modelLight_vs.glsl  model_fs.glsl  model_vs.glsl  rect_fs.glsl  spriteLight_fs.glsl  sprite_fs.glsl
Release/Resources/ShaderSrcs/: screen_vs.glsl
Release/Resources/Tex/: hero_sheet.psd
Resources/Tex/: hero_sheet.psd
Resources/cliff/: BSwap_LowPolyCliffs01.mtl  Cliff_new.mtl
Utility/: Clock.h  OrientedRect.cpp  OrientedRect.h  Rect.cpp  Rect.h  ResMgr.h
